--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "svg.js": "^2.6.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "jasmine": "^2.6.0",
+    "karma": "^1.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "",
   "license": "ISC"
