--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "codice.js",
   "dependencies": {
     "babel-preset-env": "^1.6.0",
+    "eslint-config-airbnb": "^15.1.0",
     "svg.js": "^2.6.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
     "jasmine": "^2.6.0",
     "karma": "^1.7.0"
   },
