--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "babel-preset-env": "^1.6.0",
     "eslint-config-airbnb": "^15.1.0",
+    "express": "^4.15.3",
+    "request": "^2.81.0",
     "svg.js": "^2.6.3"
   },
   "devDependencies": {
