--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
     "jasmine": "^2.6.0",
-    "karma": "^1.7.0"
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0"
   },
   "scripts": {
     "test": "jasmine"
